[package]
name = "sparsesrv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
tokio = { version = "1.20", features = ["full"] }
futures = "0.3"
async-stream = "0.3"
rand = { version = "0.8", features = ["small_rng"] }
